Multiresolution Modifier Complains About Sculpt Mode #35610

Closed
opened 2013-06-03 05:56:36 +02:00 by Benjamin Tolputt · 5 comments

%%%--- Operating System, Graphics card ---
All

- Blender version with error, and version that worked ---

Blender 2.67b

- Short description of error ---

When you add the Multiresolution Modifier to a mesh in Sculpt mode, the modifier displays a warning telling the user it is not supported in sculpt mode. This is patently not the case (as Blender's website has been advertising the fact it does support this combination since 2.56 beta). This is confusing to new users (seen this in practice) and even raises the eye-brows of us long-time users.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Default cube scene, go into sculpt mode, add a Multiresolution Modifier.

%%%

%%%--- Operating System, Graphics card --- All - Blender version with error, and version that worked --- Blender 2.67b - Short description of error --- When you add the Multiresolution Modifier to a mesh in Sculpt mode, the modifier displays a warning telling the user it is not supported in sculpt mode. This is patently not the case (as Blender's website has been advertising the fact it does support this combination since 2.56 beta). This is confusing to new users (seen this in practice) and even raises the eye-brows of us long-time users. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Default cube scene, go into sculpt mode, add a Multiresolution Modifier. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%You need to have at least one level of subdivisions to have multires working in sculpt mode. But perhaps warning message is not needed in this case.%%%

%%%You need to have at least one level of subdivisions to have multires working in sculpt mode. But perhaps warning message is not needed in this case.%%%

%%%I worked that out with a little fiddling, but that's not really what the message says. Given the message kicks in when you first add the modifier (with nothing to tell you to subdivide the model to fix it), it seems to tell users that they cannot use the modifier at all in sculpt mode. Strange given there is a value for how many levels to show in sculpt mode and all.

Perhaps the warning simply needs to be reworded? "Need subdivisions in sculpt mode" or similar?%%%

%%%I worked that out with a little fiddling, but that's not really what the message says. Given the message kicks in when you first add the modifier (with nothing to tell you to subdivide the model to fix it), it seems to tell users that they cannot use the modifier at all in sculpt mode. Strange given there is a value for how many levels to show in sculpt mode and all. Perhaps the warning simply needs to be reworded? "Need subdivisions in sculpt mode" or similar?%%%

%%%Well, message was added to show what's going on when using scultping on deformed mesh. In this case that was not obvious whether modifier could be applied or not. FOr multires that's a bit other story, and think no reason to display warning message even if it've got zero subdivisions.

Fixed in svn rev57220. Thanks for the report, closing.%%%

%%%Well, message was added to show what's going on when using scultping on deformed mesh. In this case that was not obvious whether modifier could be applied or not. FOr multires that's a bit other story, and think no reason to display warning message even if it've got zero subdivisions. Fixed in svn rev57220. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35610
No description provided.