Fix #35610: Multiresolution Modifier Complains About Sculpt Mode

If multires has got zero subdivisions in sculpt mode, no need
of displaying warning message. It was rather strange decision
which confused artists.

Now multires with zero subdivisions will be ignored silently
when in sculpt mode.