source/blender/blenkernel/intern/DerivedMesh.c
@@ -1609,13 +1609,17 @@ static void mesh_calc_modifiers(Scene *scene, Object *ob, float (*inputVertexCos
 		{
 			int unsupported = 0;
 
+			if (md->type == eModifierType_Multires && ((MultiresModifierData *)md)->sculptlvl == 0) {
+				/* If multires is on level 0 skip it silently without warning message. */
+				continue;
+			}
+
 			if (sculpt_dyntopo && !useRenderParams)
 				unsupported = TRUE;
 
 			if (scene->toolsettings->sculpt->flags & SCULPT_ONLY_DEFORM)
 				unsupported |= mti->type != eModifierTypeType_OnlyDeform;
 
-			unsupported |= md->type == eModifierType_Multires && ((MultiresModifierData *)md)->sculptlvl == 0;
 			unsupported |= multires_applied;
 
 			if (unsupported) {
